--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.3.1",
     "@ngtools/webpack": "^1.2.4",
     "@types/google-maps": "^3.2.0",
+    "angular2-jwt": "^0.1.28",
     "angular2-tooltips": "^1.0.10",
     "angularfire2": "^2.0.0-beta.8",
     "chart.js": "^2.5.0",
